--- a/index.ipynb
+++ b/index.ipynb
@@ -39,11 +39,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.08333333333333333\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "head= (1/2)\n",
+    "die3 = (1/6)\n",
+    "print(head*die3)"
    ]
   },
   {
@@ -56,11 +67,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7290000000000001"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your Solution"
+    "# Your Solution\n",
+    "\"\"\"\n",
+    "P(Student 1 likes)= 9/10\n",
+    "P(Student 2 like) = 9/10\n",
+    "P(Student3)= 9/10\n",
+    "The probability of two or more \n",
+    "independent events occurring in \n",
+    "sequence can be found by computing \n",
+    "the probability of each event separately, \n",
+    "and then multiplying the results together.\n",
+    "\"\"\"\n",
+    "(9/10)**3"
    ]
   },
   {
@@ -75,11 +108,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution "
+    "# Your solution \n",
+    "(.35)/.7\n"
    ]
   },
   {
@@ -123,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution"
+    "# Your solution\n"
    ]
   },
   {
@@ -157,7 +202,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "\"\"\"\n",
+    "\n",
+    "EVENT A= either of the dice is 5 or 6. (2/6)**2\n",
+    "Event B= the 2 dice add up to 8\n",
+    "sample size of space is 36, there are 36 possible outcomes\n",
+    "P(AnB)=((2/6)**2)*\n",
+    "\"\"\"\n"
    ]
   },
   {
@@ -221,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
